task manager using all the CRUD methods

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,12 @@
 <html>
   <head>
     <title>RailsTaskManager</title>
+      <style type="text/css">
+      h1 {
+      text-align: center;
+      }
+      </style>
+
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
